--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,11 @@ install:
 - mkdir -p "${TRAVIS_BUILD_DIR}/.cache" "${TRAVIS_BUILD_DIR}/.env"
 - echo '#!/usr/bin/env bash' > "${TRAVIS_BUILD_DIR}/.cache/gcloud-read"
 - echo 'echo "[]"' >> "${TRAVIS_BUILD_DIR}/.cache/gcloud-read"
+- chmod +x "${TRAVIS_BUILD_DIR}/.cache/gcloud-read"
 
 script:
 - ./bin/detect "${TRAVIS_BUILD_DIR}" | grep gcloud-cleanup
-- ./bin/compile "${TRAVIS_BUILD_DIR}" "${TRAVIS_BUILD_DIR}/.cache" "${TRAVIS_BUILD_DIR}/.env" &>>/dev/null
+- ./bin/compile "${TRAVIS_BUILD_DIR}" "${TRAVIS_BUILD_DIR}/.cache" "${TRAVIS_BUILD_DIR}/.env" > /dev/null
 - ./bin/release "${TRAVIS_BUILD_DIR}" | grep '^---'
 - export PATH="$TRAVIS_BUILD_DIR/google-cloud-sdk/bin:$PATH"
 - ./gcloud-cleanup
