Forget about running compilation on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ install:
 
 script:
 - ./bin/detect "${TRAVIS_BUILD_DIR}" | grep gcloud-cleanup
-- ./bin/compile "${TRAVIS_BUILD_DIR}" "${TRAVIS_BUILD_DIR}/.cache" "${TRAVIS_BUILD_DIR}/.env" > /dev/null
+- bash -n ./bin/compile
 - ./bin/release "${TRAVIS_BUILD_DIR}" | grep '^---'
 - export PATH="$TRAVIS_BUILD_DIR/google-cloud-sdk/bin:$PATH"
 - ./gcloud-cleanup
