--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,22 @@
-language: bash
+language: go
 
-cache:
-  directories:
-  - "${TRAVIS_BUILD_DIR}/.cache"
+go: 1.5.1
+
+dist: trusty
+
+group: edge
 
 env:
   global:
   - GCLOUD_CLEANUP_ONCE=1
   - GCLOUD_READ_EXE="${TRAVIS_BUILD_DIR}/.cache/gcloud-read"
   - GCLOUD_WRITE_EXE='echo not really gcloud'
+  - GO15VENDOREXPERIMENT='1'
 
 install:
-- mkdir -p "${TRAVIS_BUILD_DIR}/.cache" "${TRAVIS_BUILD_DIR}/.env"
-- if [[ ! -f "${TRAVIS_BUILD_DIR}/.cache/gcloud-read" ]] ; then
-    echo '#!/usr/bin/env bash' > "${TRAVIS_BUILD_DIR}/.cache/gcloud-read" ;
-    echo 'echo "[]"' >> "${TRAVIS_BUILD_DIR}/.cache/gcloud-read" ;
-    chmod +x "${TRAVIS_BUILD_DIR}/.cache/gcloud-read" ;
-  fi
+- go get github.com/FiloSottile/gvt
+- go get github.com/laher/goxc
 
 script:
-- ./bin/detect "${TRAVIS_BUILD_DIR}" | grep gcloud-cleanup
-- bash -n ./bin/compile
-- ./bin/release "${TRAVIS_BUILD_DIR}" | grep '^---'
-- export PATH="$TRAVIS_BUILD_DIR/google-cloud-sdk/bin:$PATH"
-- ./gcloud-cleanup
+- travis_retry make deps
+- make crossbuild
