--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ addons:
     paths:
     - "./build/linux/amd64/gcloud-cleanup"
     - "./build/darwin/amd64/gcloud-cleanup"
-    - "./build.tar.bz2"
+    - "./build.tar.gz"
     target_paths:
     - travis-ci/gcloud-cleanup/$TRAVIS_BRANCH
     - travis-ci/gcloud-cleanup/$TRAVIS_COMMIT
@@ -28,4 +28,4 @@ script:
 - make crossbuild
 
 after_script:
-- tar -cjvf build.tar.bz2 build
+- tar -czvf build.tar.gz build Procfile
