Add `heroku` make target for buildpack compat

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,4 +28,4 @@ script:
 - make crossbuild
 
 after_script:
-- tar -czvf build.tar.gz build Procfile
+- tar -czvf build.tar.gz build Procfile Makefile
