--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ group: edge
 env:
   global:
   - GO15VENDOREXPERIMENT='1'
+  - TRAVIS_COMMIT_SHORT="$(echo $TRAVIS_COMMIT | cut -b1-7)"
 
 addons:
   artifacts:
@@ -19,6 +20,7 @@ addons:
     target_paths:
     - travis-ci/gcloud-cleanup/$TRAVIS_BRANCH
     - travis-ci/gcloud-cleanup/$TRAVIS_COMMIT
+    - travis-ci/gcloud-cleanup/$TRAVIS_COMMIT_SHORT
 
 install:
 - make prereqs
