Ship to first 7 of sha1 *and* first 9 of sha1
because thank you heroku :heart:

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ env:
   global:
   - GO15VENDOREXPERIMENT='1'
   - TRAVIS_COMMIT_SHORT="$(echo $TRAVIS_COMMIT | cut -b1-7)"
+  - TRAVIS_COMMIT_LESSSHORT="$(echo $TRAVIS_COMMIT | cut -b1-9)"
 
 addons:
   artifacts:
@@ -21,6 +22,7 @@ addons:
     - travis-ci/gcloud-cleanup/$TRAVIS_BRANCH
     - travis-ci/gcloud-cleanup/$TRAVIS_COMMIT
     - travis-ci/gcloud-cleanup/$TRAVIS_COMMIT_SHORT
+    - travis-ci/gcloud-cleanup/$TRAVIS_COMMIT_LESSSHORT
 
 install:
 - make prereqs
