Sort and normalize style of example env

--- a/.example.env
+++ b/.example.env
@@ -1,9 +1,9 @@
 export GCLOUD_CLEANUP_ACCOUNT_JSON='tmp/gce.json'
-export GCLOUD_CLEANUP_ZONES='us-central1-b,us-central1-f'
-export GCLOUD_CLEANUP_PROJECT_ID='fancy-project-name-there'
 export GCLOUD_CLEANUP_INSTANCE_FILTERS='name eq ^ohai-test.*'
-export JOB_BOARD_URL='https://auth:auth@job-board-somewhere.example.com'
-export GCLOUD_CLEANUP_RATE_LIMIT_DURATION=1s
-export GCLOUD_CLEANUP_RATE_LIMIT_MAX_CALLS=2
-export GCLOUD_CLEANUP_RATE_LIMIT_PREFIX=rate-limit-gcloud-cleanup
+export GCLOUD_CLEANUP_JOB_BOARD_URL='https://auth:auth@job-board-somewhere.example.com'
+export GCLOUD_CLEANUP_PROJECT_ID='fancy-project-name-there'
+export GCLOUD_CLEANUP_RATE_LIMIT_DURATION='1s'
+export GCLOUD_CLEANUP_RATE_LIMIT_MAX_CALLS='2'
+export GCLOUD_CLEANUP_RATE_LIMIT_PREFIX='rate-limit-gcloud-cleanup'
 export GCLOUD_CLEANUP_RATE_LIMIT_REDIS_URL='redis://auth:auth@somewhere.in.aws.example.com:6979'
+export GCLOUD_CLEANUP_ZONES='us-central1-b,us-central1-f'
