Switch to go modules
and more!

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,7 @@ jobs:
   include:
   - stage: test
     name: linux
-    install:
-    - make prereqs
     script:
-    - travis_retry make deps
     - make copyright
     - git diff --exit-code
     - git diff --cached --exit-code
@@ -45,7 +42,7 @@ jobs:
     - export VERSION_VALUE=$(git describe --always --dirty --tags 2>/dev/null)
     - export DOCKER_DEST=$DOCKER_IMAGE_REPO:$VERSION_VALUE
     - docker build -t $DOCKER_DEST .
-    - docker run -it $DOCKER_DEST --help
+    - docker run --rm -it $DOCKER_DEST gcloud-cleanup --help
     - script/docker-push $DOCKER_DEST
     addons:
       apt:
